Adiciona novos detalhes

--- a/quinto/novo.html
+++ b/quinto/novo.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>lista de frutas</h1>
+    <li>banana</li>
+    <li>laranja</li>
+    <li>pera</li>
+    <li>maça</li>
+    <li>uva</li>
+    <li>vassoura</li>
+    <p>obrigada a todas!</p>
 </body>
 </html>
